--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,10 @@
 .App {
-  margin-top: -120px;
-  text-align: center;
+}
+
+.TempHolder{
+  position: absolute;
+  top: 0;
+  background-color: red;
 }
 
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
